=== 2.3.0 / 200?-??-??

* X Major Enhancements
  * RDoc now automatically loads rdoc/discover.rb files from installed gems.
  * RDoc now uses Michael Granger's Darkfish generator by default.
  * Various RDoc speedups by Hongli Lai.  Patches #22555, #22556, #22557,
    #22562, #22565.

* Y Minor Enhancements
  * Added a space after the commas in ri class method lists.  RubyForge
    enhancement #22182.
  * Converted to minitest.

* Z Bug Fixes
  * Fix missing superclass in ri output.
  * Fix an RDoc crash when told to parse an empty file.
  * Ignore nonexistent files instead of crashing.
  * .txt and .rdoc files are always considered text.  Patch #22897 by Aaron
    Patterson.
  * When merging ri data with a nonexistant directory, RDoc no longer crashes.
  * Fix visibility of methods in XML output.  Issue by Yehuda Katz.

=== 2.2.1 / 2008-09-24
This version provides some minor fixes and enhancements to 2.2.0 intended
to polish RDoc for Ruby 1.9.1.

* 3 Minor Enhancements
  * Support for parsing RDoc from SWIG.  Ruby patch #10742 by Gonzalo
    Garramuno, #13993 by Steven Jenkins.
  * Simple support for Perl POD documentation.  Patch by Hugh Sasse.
  * Changed the default character set of RDoc's output from iso-8859-1 to
    utf-8.

* 9 Bug Fixes
  * Explicitly set the html template's text color, so that the generated
    documentation will display correctly on browsers with custom text and
    background color settings (patch by Luther Thompson).
  * Ensure that RDoc correctly will associate an alias and a method, even
    if it encounters the alias first because the alias lives in a different
    file.
  * Fix the parsing of multiline constants (patch by Chris Alfeld and
    Joel VanderWerf)
  * Make --exclude usuable.  Ruby patch #11671 by Trans.
  * Detect inline C functions.  Ruby Bug #11993 by Florian Frank.
  * Fix an issue in which RDoc might not document a class'
    superclass correctly if the class was defined in multiple files and