@@ -11,8 +11,6 @@ lib/rdoc/code_objects.rb
 lib/rdoc/diagram.rb
 lib/rdoc/dot.rb
 lib/rdoc/generator.rb
-lib/rdoc/generator/chm.rb
-lib/rdoc/generator/chm/chm.rb
 lib/rdoc/generator/darkfish.rb
 lib/rdoc/generator/html.rb
 lib/rdoc/generator/html/common.rb
@@ -23,6 +21,7 @@ lib/rdoc/generator/html/kilmer.rb
 lib/rdoc/generator/html/kilmerfactory.rb
 lib/rdoc/generator/html/one_page_html.rb
 lib/rdoc/generator/ri.rb
+lib/rdoc/generator/template/darkfish/.document
 lib/rdoc/generator/template/darkfish/classpage.rhtml
 lib/rdoc/generator/template/darkfish/filepage.rhtml
 lib/rdoc/generator/template/darkfish/images/brick.png
@@ -33,6 +32,7 @@ lib/rdoc/generator/template/darkfish/images/loadingAnimation.gif
 lib/rdoc/generator/template/darkfish/images/macFFBgHack.png
 lib/rdoc/generator/template/darkfish/images/package.png
 lib/rdoc/generator/template/darkfish/images/page_green.png
+lib/rdoc/generator/template/darkfish/images/page_white_text.png
 lib/rdoc/generator/template/darkfish/images/page_white_width.png
 lib/rdoc/generator/template/darkfish/images/plugin.png
 lib/rdoc/generator/template/darkfish/images/ruby.png
@@ -47,6 +47,7 @@ lib/rdoc/generator/template/darkfish/js/quicksearch.js
 lib/rdoc/generator/template/darkfish/js/thickbox-compressed.js
 lib/rdoc/generator/template/darkfish/rdoc.css
 lib/rdoc/generator/texinfo.rb
+lib/rdoc/generator/texinfo/.document
 lib/rdoc/generator/texinfo/class.texinfo.erb
 lib/rdoc/generator/texinfo/file.texinfo.erb
 lib/rdoc/generator/texinfo/method.texinfo.erb
